AiService opdateret så den aflæser pdf, txt mm

--- a/source/repos/dotlegalBackend/dotlegalBackend/dotlegalBackend.csproj
+++ b/source/repos/dotlegalBackend/dotlegalBackend/dotlegalBackend.csproj
@@ -20,8 +20,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="OpenAI" Version="2.0.0" />
+    <PackageReference Include="PdfPig" Version="0.1.12" />
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Xceed.Words.NET" Version="5.1.25458.6676" />
   </ItemGroup>
 
 </Project>
