--- a/source/repos/dotlegalBackend/dotlegalBackend/dotlegalBackend.csproj
+++ b/source/repos/dotlegalBackend/dotlegalBackend/dotlegalBackend.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
@@ -25,7 +26,6 @@
     <PackageReference Include="PdfPig" Version="0.1.12" />
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-    <PackageReference Include="Xceed.Words.NET" Version="5.1.25458.6676" />
   </ItemGroup>
 
 </Project>
